# gistly

./: .env.example  .gitignore  CLAUDE.md  INSTRUCTIONS.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  test.py
docs/: ADR-001-discovery-process.md  gist-delete-flows.md  gist-list-flows.md  gist-update-flows.md
gist_manager/: __init__.py  cli.py  config.py  core.py
tests/: conftest.py  test_cli.py  test_config.py  test_core.py
tests/fixtures/mock_responses/: existing_gist.json  gist_list.json  gist_not_found.json  successful_gist_creation.json  updated_gist.json  validation_error.json
tests/fixtures/sample_files/: example.md  example.py
